# corewar

./: CMakeLists.txt  config.h.in  main.cpp  readme.md  testwarrior.cpp  warrior_1000gen_extopponents.red
